Ensure joke isn't cut off on iOS Safari

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -22,3 +22,7 @@ mat-toolbar {
   z-index: 1000;
   height: 50px;
 }
+
+.content {
+  padding-top: 50px; // TODO Use a shared scss variable
+}
